dark mode almost fully implemented, bug on show page makes search bar text white

--- a/client/src/components/commons/lockedFeatureDialog.module.scss
+++ b/client/src/components/commons/lockedFeatureDialog.module.scss
@@ -1,1 +1,4 @@
 // dialog for if a feature is locked scss
+.link {
+  color: inherit;
+}
