--- a/client/src/components/css/theme.css
+++ b/client/src/components/css/theme.css
@@ -1,8 +1,8 @@
 :root {
-  --bg-color: #e9e9e9;
+  --bg-color: #0f0f0e;
   --border-color: #c7c7c4;
   --brand-color: #2274a5;
-  --font-color: #0f0f0e;
+  --font-color: #e9e9e9;
 }
 
 body {
