--- a/client/src/components/showForm/showForm.module.scss
+++ b/client/src/components/showForm/showForm.module.scss
@@ -25,3 +25,11 @@
   align-items: center;
   margin: 20px;
 }
+
+.test {
+  color: var(--font-color) !important;
+}
+
+.test2 {
+  color: grey !important;
+}
