--- a/client/src/components/showsView/shows.module.scss
+++ b/client/src/components/showsView/shows.module.scss
@@ -1,5 +1,4 @@
 .container {
-  width: 860%;
   display: flex;
   justify-content: center;
   margin: auto;
